--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: #0c0202;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #0c0202;
+}
+
+@media only screen and (max-width: 500px) {
+  nav {
+    display: flex;
   }
-
-
-  @media only screen and (max-width: 500px) {
-
 }
 
 nav {
-    display: flex;
+  display: flex;
 }
