css class logo and media query logo added

--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,15 @@ a {
       flex-wrap: wrap;
     }
   }
+
+  .logo {
+    width: 60vw;
+  }
+  
+  @media (max-width: 650px) {
+    .logo {
+      margin-top: 15px;
+      width: 100%;
+      position: relative;
+    }
+  }
