class logo>img and media query logo>img styled

--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,20 @@ a {
       position: relative;
     }
   }
+
+  .logo > img {
+    width: 100%;
+    height: 100%;
+    max-width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 20px;
+  }
+  
+  @media (max-width: 650px) {
+    .logo > img {
+      margin: 0 auto;
+    }
+  }
