--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,16 @@ nav {
         padding-bottom: 5px;
       }
     }
+
+    nav > ul {
+        width: 35vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+      }
+      
+      @media (max-width: 650px) {
+        nav > ul {
+          flex-direction: column;
+        }
+      }
