--- a/styles.css
+++ b/styles.css
@@ -131,3 +131,18 @@ nav > ul {
     margin-bottom: 20px;
     word-wrap: break-word;
   }
+
+  #hero input[type='email'] {
+    max-width: 275px;
+    width: 100%;
+    padding: 5px;
+  }
+  
+  #hero input[type='submit'] {
+    max-width: 150px;
+    width: 100%;
+    height: 30px;
+    margin: 15px 0;
+    border: 0;
+    background-color: #f1c40f;
+  }
