--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,14 @@ nav > ul {
       margin-top: 0;
     }
   }
+
+  #how-it-works {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  #how-it-works > iframe {
+    max-width: 560px;
+    width: 100%;
+  }
