--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/** global element styling **/
+@import "https://fonts.googleapis.com/css?family=Lato:400,700";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #eee;
   font-family: Lato, sans-serif;
@@ -16,6 +25,7 @@ a {
   text-decoration: none;
 }
 
+/** global classes styling **/
 .container {
   max-width: 1000px;
   width: 100%;
